<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="LoginVM"
            type="org.ledeme.animekeeper.AddAnimeMV"/>
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".AddAnime"
        android:background="@drawable/bgk42"
        tools:showIn="@layout/activity_add_anime">

        <TextView
            android:id="@+id/add_anime_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_anime_name_input"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorWhite"
            android:height="30dp"
            android:text="@string/add_anime_name"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:width="200dp"
            android:height="40dp"
            android:inputType="text"
            android:hint="@string/add_anime_name_input"
            android:id="@+id/add_anime_name_input"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:text="@{LoginVM.name}"
            android:afterTextChanged="@{(edtitable)->LoginVM.afterAnimeNameChange(edtitable)}"
            />

        <TextView
            android:id="@+id/add_anime_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_alignBaseline="@+id/add_anime_genres_input"
            android:layout_alignParentStart="true"
            android:height="30dp"
            android:text="@string/add_anime_genres"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:width="200dp"
            android:height="40dp"
            android:inputType="text"
            android:hint="@string/add_anime_genre_input"
            android:id="@+id/add_anime_genres_input"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:layout_below="@+id/add_anime_name_input"
            android:text="@{LoginVM.genres}"
            android:afterTextChanged="@{(edtitable)->LoginVM.afterAnimeGenresChange(edtitable)}"
            />

        <TextView
            android:id="@+id/add_anime_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_alignBaseline="@+id/add_anime_season_input"
            android:layout_alignParentStart="true"
            android:height="30dp"
            android:text="@string/add_anime_season"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:width="200dp"
            android:height="40dp"
            android:inputType="number"
            android:hint="@string/add_anime_season_input"
            android:id="@+id/add_anime_season_input"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:layout_below="@+id/add_anime_genres_input"
            android:text="@{LoginVM.season}"
            android:afterTextChanged="@{(edtitable)->LoginVM.afterAnimeSeasonChange(edtitable)}"
            />

        <TextView
            android:id="@+id/add_anime_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_alignBaseline="@+id/add_anime_episodes_input"
            android:layout_alignParentStart="true"
            android:height="30dp"
            android:text="@string/add_anime_episodes"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:width="200dp"
            android:height="40dp"
            android:inputType="number"
            android:hint="@string/add_anime_season_episodes"
            android:id="@+id/add_anime_episodes_input"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:layout_below="@+id/add_anime_season_input"
            android:text="@{LoginVM.nbEpisodes}"
            android:afterTextChanged="@{(edtitable)->LoginVM.afterAnimeNbEpChange(edtitable)}"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:text="@string/add_anime"
            android:width="200dp"
            android:id="@+id/add_anime_btn"
            android:onClick="@{() -> LoginVM.onClick()}"
            />

    </RelativeLayout>
</layout>
